@@ -1,3 +1,7 @@
+2012-05-06  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/arm/v6/sqr_basecase.asm: Simplify n=4 code.
+
 2012-05-05 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpn/generic/invert.c: Mark a branch UNLIKELY.
